# GPT_Vuln-analyzer

./: .env  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributor.txt  GVA_gui.py  LICENSE  README.md  SECURITY.md  gpt_vuln.py  llama_api.py  openai  pip-3.11  ref.py  requirements.txt  setup.cfg  t.py  test.py  test.txt  testfile.py
.github/ISSUE_TEMPLATE/: code-improvements.md  feature-adding.md
commands/: ai.py  assets.py  d.py  dns_recon.py  domain.py  geo.py  gpt_ai.py  menus.py  p.py  port_scanner.py  subdomain.py
components/: assets.py  dns_recon.py  geo.py  jwt.py  menus.py  models.py  packet_analysis.py  passbeaker.py  passbreaker.py  port_scanner.py  subdomain.py
lists/: default.txt
package/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
package/GVA/: ai_models.py  dns_recon.py  geo.py  gui.py  menus.py  packet_analysis.py  profile.py  requirements.txt  scanner.py  subdomain.py
package/GVA.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vuln_analyzer/: pyvenv.cfg
