[metadata]
name = GVA
version = 1.1.8
author = Chiranjeevi G
author_email = morpheuslord@protonmail.com
description = Vuln analyzer and other basic recon tools with AI capabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/morpheuslord/GVA_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
